# blender

./: GNUmakefile
build_files/build_environment/: CMakeLists.txt
build_files/build_environment/cmake/: brotli.cmake  ffmpeg.cmake  flac.cmake  freetype.cmake  glew.cmake  glfw.cmake  jpeg.cmake  openjpeg.cmake  options.cmake  png.cmake  tbb.cmake  tiff.cmake  usd.cmake  versions.cmake  xvidcore.cmake
build_files/build_environment/patches/: brotli.diff  jpeg.diff  opencolorio.diff  tiff.diff  usd.diff
build_files/cmake/config/: blender_lite.cmake
build_files/cmake/platform/: platform_apple.cmake  platform_apple_xcode.cmake
build_files/utils/: make_update.py
intern/ghost/: CMakeLists.txt
intern/ghost/intern/: GHOST_ContextEAGL.h  GHOST_ContextEAGL.mm  GHOST_DisplayManagerUIKit.h  GHOST_DisplayManagerUIKit.mm  GHOST_ISystem.cpp  GHOST_SystemUIKit.h  GHOST_SystemUIKit.mm  GHOST_WindowUIKit.h  GHOST_WindowUIKit.mm  GHOST_WindowViewControllerUIKit.h  GHOST_WindowViewUIKit.h
release/scripts/startup/bl_ui/: space_view3d.py
source/blender/blenloader/intern/: versioning_300.c
source/blender/draw/: CMakeLists.txt
source/blender/makesdna/: DNA_view3d_types.h
